<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrezyRemote</string>
    
    <!-- Presentation -->
    <string name="presentation_none">No Presentation!</string>    
    
    <!-- Controls -->
    <string name="prev_step">Previous</string>
    <string name="next_step">Next</string>
    <string name="play_presentation">Play</string>
    <string name="first_step">First</string>
    <string name="last_step">Last</string>
    
</resources>
