<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="10sp"
    style="@style/AppTheme">

    <!-- Title -->
    <!-- Prev < | > Next -->
    <!-- First | Play/Pause | Back | Last -->
    <!-- Step title -->
    <!-- Progress bar/step timeout -->
    <!-- Seekbar for presentation -->
    
    <TextView 
        android:id="@+id/presentation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:text="@string/presentation_none"/>
    
    <LinearLayout 
        android:id="@+id/bookmarks_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
	   	
	    <TextView 
	        android:id="@+id/step_title"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:gravity="center"
	        android:layout_marginTop="10sp"
	        android:layout_marginBottom="5sp"
	       	android:textAlignment="gravity"
	       	android:textSize="25sp"
	        android:text="Not connected"/>
	    
	    <RelativeLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content">

		    <ProgressBar
		        android:id="@+id/timeout"
		        android:layout_width="match_parent"
	            android:layout_height="wrap_content"
		        android:progress="20"
		        style="@android:style/Widget.ProgressBar.Horizontal"/>

		    <TextView 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="0:20"/>
		    	        
	    </RelativeLayout>
	    
	    <SeekBar
	        android:id="@+id/seekbar"
	        android:layout_marginTop="10sp"
	        android:layout_marginBottom="10sp"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"/>
	   	
    </LinearLayout>

    <LinearLayout
   	    android:id="@+id/controls_container"
   	    android:layout_above="@id/bookmarks_container"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal">
   	    
        <Button
            android:id="@+id/button_first" 
            android:layout_width="0dp"
            android:layout_weight="1"
	   	    android:layout_height="match_parent"
	    	android:text="@string/first_step"
	    	android:drawableLeft="@drawable/ic_action_previous"
	    	android:contentDescription="@string/first_step"
	    	style="@style/ButtonTheme"
	    	android:onClick="onButtonClick" />
        
   	    <ImageButton
   	        android:id="@+id/button_play"
	   	    android:layout_width="0dp"
            android:layout_weight="1"
	   	    android:layout_height="match_parent"
	    	android:contentDescription="@string/play_presentation"
	    	android:src="@drawable/ic_action_play_over_video"
	    	style="@style/ButtonTheme"
	    	android:onClick="onButtonClick"/>
   	    
   	    <Button
            android:id="@+id/button_last" 
            android:layout_width="0dp"
            android:layout_weight="1"
	   	    android:layout_height="match_parent"
	    	android:text="@string/last_step"
	    	android:drawableRight="@drawable/ic_action_next"
	    	android:contentDescription="@string/first_step"
	    	style="@style/ButtonTheme"
	    	android:onClick="onButtonClick" />
   	    
   	</LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/presentation_title"
        android:layout_above="@id/controls_container">
   	    
	    <LinearLayout
	        android:id="@+id/arrow_container"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_alignParentTop="true"
	        android:orientation="horizontal">
	
	        <ImageButton
		   	    android:id="@+id/button_prev"
		   	    android:layout_weight="1"
		   	    android:layout_width="0dp"
		   	    android:layout_height="match_parent"
		   	    android:layout_margin="5dp"
		   	    android:src="@drawable/ic_action_previous_item"
		   	    android:contentDescription="@string/prev_step"
		   	    android:background="@drawable/button_background"
		    	android:onClick="onButtonClick"
		    	/>
		   	
		   	<ImageButton
		   	    android:id="@+id/button_next"
		   	    android:layout_weight="1"
		   	    android:layout_width="0dp"
		   	    android:layout_height="match_parent"
		   	    android:layout_margin="5dp"
		    	android:src="@drawable/ic_action_next_item"
		    	android:contentDescription="@string/next_step"
		    	android:background="@drawable/button_background"
		    	android:onClick="onButtonClick"/>
	    </LinearLayout>
	    
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_alignParentTop="true"
	        android:background="#33000000"
	        android:padding="10sp"
	        android:gravity="center"
	        android:scrollbars="vertical"
	        android:textSize="25sp"
	        android:visibility="gone"/>
	    
	</RelativeLayout>
</RelativeLayout>